# vc-rust

./: Cargo.toml
example/: memo.json  unsigned_vc.json
src/: errors.rs  key.rs  lib.rs  utils.rs
src/cli/: mod.rs
src/cli/setup/: create_key.rs  generate_vc.rs  greed.rs  import_vc.rs  mod.rs  read_memo.rs  sign_vc.rs  traits.rs  verify_vc.rs
